tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_trash_selected.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"  DeletedSite                                              ◀"
"  Deleted 5 days ago  Auto-delete in 25 days                "
"────────────────────────────────────────────────────────────"
"  AnotherDeleted                                            "
"  Deleted 10 days ago  Auto-delete in 20 days               "
"────────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
