tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_unfocused.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"                                                            "
"  󰀋 GitHub                                      2024-06-15  "
"  user@github.com                                           "
"────────────────────────────────────────────────────────────"
"  󰀋 GitLab                                      2024-06-15  "
"  dev@gitlab.com                                            "
"────────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
